--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,3 @@
-platform_bootstrap:
-    resource: "@TopicsBootstrapBundle/Resources/config/routing.xml"
+topycs_bootstrap:
+    resource: "@TopycsBootstrapBundle/Resources/config/routing.xml"
     prefix:   /
