--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "stof/doctrine-extensions-bundle": "~1.1",
         "runmybusiness/initialcon": "0.1.0",
-        "erusev/parsedown": "1.0.1"
+        "erusev/parsedown": "1.0.1",
+        "friendsofsymfony/user-bundle": "v1.3.3"
     },
     "require-dev": {
         "behat/behat": "~3.0.6",
