--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,3 @@
-topycs_bootstrap:
-    resource: "@TopycsBootstrapBundle/Resources/config/routing.xml"
+topycs_web:
+    resource: "@TopycsWebBundle/Resources/config/routing.xml"
     prefix:   /
