--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,5 +1,6 @@
 imports:
     - { resource: parameters.yml }
+    - { resource: doctrine_extensions.yml }
     - { resource: security.yml }
 
 framework:
@@ -79,3 +80,9 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: Topycs\Entity\User
+
+stof_doctrine_extensions:
+    default_locale: en_US
+    orm:
+        default:
+            timestampable: true
