--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,15 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "~2.4",
+        "symfony/symfony": "~2.5",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
         "twig/extensions": "~1.0",
         "symfony/assetic-bundle": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~2.3",
+        "sensio/distribution-bundle": "3.0.*@dev",
         "sensio/framework-extra-bundle": "~3.0",
-        "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
         "stof/doctrine-extensions-bundle": "~1.1",
         "runmybusiness/initialcon": "0.1.0",
@@ -33,6 +32,7 @@
     "require-dev": {
         "behat/behat": "~3.0.6",
         "phpspec/phpspec": "~2.0.0",
+        "sensio/generator-bundle": "~2.3",
         "behat/mink-goutte-driver": "*@dev",
         "behat/symfony2-extension": "*@dev",
         "behat/mink-extension": "*@dev",
